    implementation (eg. authentication dialogs not working)
  * Fixed a bug in install-dep that the downloads were not cached anymore
  * Added --destdir to install-dep script (required for distributions without
    postinstallation step)
  * Added workaround for archlinux, which seems to set always the
    environment variable MOZ_PLUGIN_PATH
  * Added PIPELIGHT_X11WINDOW environment variable (can be used for XBMC-like
    plugins based on pipelight)
  * The win32 part is now statically linked against the mingw32 runtime
    and we therefore dropped the dependency on mingw for end users
    which should save a lot of space
  * Enable GPU acceleration for flash
  * For Silverlight and flash: Show popup menu entries when right-clicking on
    the plugin (more options will be added later)

 -- Michael Mueller <michael@fds-team.de>  Mon, 14 Oct 2013 23:35:37 +0200


pipelight-multi (0.2.0) RELEASED; urgency=low

  * Implemented possibility to use multiple windows plugins
  * Renamed package to pipelight-multi, converted pipelight into a meta package
    (contains only a readme file and enables Silverlight to be backwards
    compatible)
  * Dropped dependencies on other packages than wine-compholio and moved all
    required scripts into pipelight-multi
  * Added config and downloader for Flash
  * Added several wine patches to fix deadlocks and race conditions when using
    hardware acceleration with Silverlight
  * Removed all Silverlight specific config options (except graphicDriverCheck)
  * Added possibility to read plugin path from the registry, so that it is not
    necessary to update the configuration on a plugin update
  * Added pipelight-plugin script which allows the user to enable or disable
    specific plugins for either his account or system-wide
  * Code refactoring (renamed files, moved shared code into common.h, use of
    inline functions when appropriate, ...)
  * Fixed several smaller bugs
