@@ -8,14 +8,16 @@ pipelight-multi (0.2.1) UNRELEASED; urgency=low
     postinstallation step)
   * Added workaround for archlinux, which seems to set always the
     environment variable MOZ_PLUGIN_PATH
-  * Added PIPELIGHT_X11WINDOW environment variable (can be used for XBMC-like
-    plugins based on pipelight)
   * The win32 part is now statically linked against the mingw32 runtime
     and we therefore dropped the dependency on mingw for end users
     which should save a lot of space
   * Enable GPU acceleration for flash
   * For Silverlight and flash: Show popup menu entries when right-clicking on
     the plugin (more options will be added later)
+  * Added additional workaround for a Chrome bug
+  * Updated the wine-compholio patches to work around problems with multiple
+    browser tabs and the flash plugin, moreover to fix a bug related to the
+    QT XEmbed libraries
 
  -- Michael Mueller <michael@fds-team.de>  Mon, 14 Oct 2013 23:35:37 +0200
 
@@ -38,6 +40,8 @@ pipelight-multi (0.2.0) RELEASED; urgency=low
     specific plugins for either his account or system-wide
   * Code refactoring (renamed files, moved shared code into common.h, use of
     inline functions when appropriate, ...)
+  * Added PIPELIGHT_X11WINDOW environment variable (can be used for XBMC-like
+    plugins based on pipelight)
   * Fixed several smaller bugs
 
  -- Michael Mueller <michael@fds-team.de>  Mon, 14 Oct 2013 23:35:37 +0200
